<resources>
    <string name="app_name">歌词适配</string>
    <string name="lrc_label">纯音乐，请欣赏</string>
    <string name="defaultWelcome">欢迎使用，有什么好的建议请反馈哟</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="hint">提示</string>
    <string name="play_mode_single">单曲循环</string>
    <string name="play_mode_random">随机播放</string>
    <string name="play_mode_order">顺序播放</string>
    <string name="cannot_remove_current_song">不能移除正在播放的歌曲</string>
    <string name="hires">HR</string>
    <string name="lossless">无损</string>
    <string name="high">高品</string>
    <string name="standard">标准</string>
    <string name="autoselectquality">歌曲没有对应品质时，系统自动选择相近品质</string>
    <string name="selectbatchquality">选择批量下载的音质</string>
</resources>