<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="100000.0dip"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="55.0dip"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/set2title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20.0dip"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/selectbatchquality"
                        android:textColor="#ff00b4ff"
                        android:textSize="12.0sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20.0dip"
                        android:layout_marginTop="2.0dip"
                        android:gravity="center_vertical"
                        android:text="@string/autoselectquality"
                        android:textSize="11.0sp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dip"
                    android:background="?android:dividerVertical" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/brdialogButton1"
                        android:layout_width="fill_parent"
                        android:layout_height="54.0dip"
                        android:background="@drawable/button"
                        android:text="@string/standard"
                        android:textSize="11.0sp" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dip"
                        android:background="?android:dividerVertical"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/brdialogButton2"
                        android:layout_width="fill_parent"
                        android:layout_height="54.0dip"
                        android:background="@drawable/button"
                        android:text="@string/high"
                        android:textSize="11.0sp" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dip"
                        android:background="?android:dividerVertical"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/brdialogButton3"
                        android:layout_width="fill_parent"
                        android:layout_height="54.0dip"
                        android:background="@drawable/button"
                        android:text="@string/lossless"
                        android:textSize="11.0sp" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dip" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/brdialogButton4"
                        android:layout_width="fill_parent"
                        android:layout_height="61.0dip"
                        android:background="@drawable/button"
                        android:text="@string/hires"
                        android:textSize="11.0sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
