<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialogTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hint"
                android:textColor="#ff000000"
                android:textSize="12.0sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="90.0dip"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialogTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_marginRight="35.0dip"
            android:layout_marginBottom="10.0dip"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4.0dip"
            android:textColor="#ff000000"
            android:textCursorDrawable="@null"
            android:textIsSelectable="true"
            android:textSize="12.0sp"
            android:textStyle="normal" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="15.0dip"
        android:background="?android:dividerVertical"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialogButton1"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="50.0dip"
            android:layout_marginStart="48.0dip"
            android:layout_marginBottom="30.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/selector_btn_blue_rounded"
            android:text="@string/ok"
            android:textColor="#ffffffff"
            android:textSize="12.0sp" />

        <View
            android:layout_width="48.0dip"
            android:layout_height="fill_parent"
            android:background="?android:dividerHorizontal"
            android:visibility="invisible" />

        <Button
            android:id="@+id/dialogButton2"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="50.0dip"
            android:layout_marginEnd="48.0dip"
            android:layout_marginBottom="30.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/selector_btn_gray_light_rounded"
            android:text="@string/cancel"
            android:textColor="#ff000000"
            android:textSize="12.0sp" />
    </LinearLayout>
</LinearLayout>
